--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,9 @@
-<h2>Entre em sua conta!</h2>
+<div class="container">
+    <div class="st-tit-pag">Entre em sua conta!</div>
 
-<form method="post">
-    <input type="text" name="login"/>
-    <input type="password" name="password"/>
-    <input type="submit" name="acao" value="Logar"/>
-</form>
+    <form method="post">
+        <input class="form-control mb-2" type="text" name="login"/>
+        <input class="form-control mb-2" type="password" name="password"/>
+        <input class="btn btn-secondary mb-2" type="submit" name="acao" value="Logar"/>
+    </form>
+</div>
