--- a/views/layout/layoutPadrao.ejs
+++ b/views/layout/layoutPadrao.ejs
@@ -7,6 +7,7 @@
     <title><%= titulo %></title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="/public/assets/css/style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-light">
