--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,20 @@
-<div class="container">
-    <div class="st-tit-pag">Entre em sua conta!</div>
-
-    <form method="post">
-        <input class="form-control mb-2" type="text" name="login"/>
-        <input class="form-control mb-2" type="password" name="password"/>
-        <input class="btn btn-secondary mb-2" type="submit" name="acao" value="Logar"/>
-    </form>
+<div class="main-login">
+    <div class="left-login">
+        <h1>Faça seu Login!<br>E entre para o nosso time</h1>
+        <img src="login.svg" alt="">
+    </div>
+    <div class="right-login">
+        <div class="card-login">
+            <h1>LOGIN</h1>
+            <div class="textfield">
+                <label for="usuario">Usuário</label>
+                <input type="text" name="login" placeholder="Usuário">
+            </div>
+            <div class="textfield">
+                <label for="">Senha</label>
+                <input type="password" name="password" placeholder="Senha">
+            </div>
+            <button class="btn-login" type="submit" name="acao" value="Logar">Login</button>
+        </div>
+    </div>
 </div>
