--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -100,3 +100,11 @@ body {
     box-shadow: 0px 10px 40px -12px #00ff8052;
 }
 
+.st-tit-pag {
+    color: blue;
+    font-size: 2em;
+}
+
+h2 {
+    color: blue;
+}
