--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,6 +5,10 @@ body {
     font-family: 'Noto Sans Display', sans-serif;
 }
 
+body * {
+    box-sizing: border-box;
+}
+
 .main-login{
     width: 100vw;
     height: 100vh;
@@ -24,6 +28,7 @@ body {
 }
 
 .left-login > h1 {
+    font-size: 3vw;
     color: aqua;
 }
 
@@ -98,6 +103,43 @@ body {
     background-color: #00ff88;
     cursor: pointer;
     box-shadow: 0px 10px 40px -12px #00ff8052;
+}
+
+.left-login-img{
+     width: 35vw;
+}
+
+@media only screen and (max-width: 950px){
+    .card-login{
+        width: 85%;
+    }
+}
+
+@media only screen and (max-width: 600px){
+    .main-login{
+        flex-direction: column;
+    }
+    .left-login > h1 {
+        display: none;
+    }
+    .left-login{
+        width: 100%;
+        height: auto;
+    }
+    .right-login{
+        width: 100%;
+        height: auto;
+    }
+    .left-login-img{
+        width: 50vw;
+    }
+    .card-login{
+        width: 90%;
+    }
+}
+
+.navbar-fundo{
+    background: #2b134b;
 }
 
 .st-tit-pag {
