--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,6 @@
 <div class="main-login">
     <div class="left-login">
-        <h1>Faça seu Login!<br>E entre para o nosso time</h1>
-        <img src="login.png" alt="Tela de Login segura">
+        <img src="/public/img/loginanimado.svg" class="left-login-img" alt="Tela de Login segura">
     </div>
     <div class="right-login">
         <div class="card-login">
