--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,15 +5,28 @@
     <div class="right-login">
         <div class="card-login">
             <h1>LOGIN</h1>
-            <div class="textfield">
-                <label for="usuario">Usuário</label>
-                <input type="text" name="login" placeholder="Usuário">
-            </div>
-            <div class="textfield">
-                <label for="">Senha</label>
-                <input type="password" name="password" placeholder="Senha">
-            </div>
-            <button class="btn-login" type="submit" name="acao" value="Logar">Login</button>
+            <form action="/" method="post">
+                <div class="textfield">
+                    <label for="usuario">Usuário</label>
+                    <input type="text" name="login" placeholder="Usuário">
+                </div>
+                <div class="textfield">
+                    <label for="">Senha</label>
+                    <input type="password" name="password" placeholder="Senha">
+                </div>
+                <button class="btn-login" type="submit" name="acao" value="Logar">Login</button>
+            </form>
         </div>
     </div>
+    <form action="/cadastra-usr" method="post">
+        <div class="textfield">
+            <label for="usuario">Usuário</label>
+            <input type="text" name="login" placeholder="Usuário">
+        </div>
+        <div class="textfield">
+            <label for="">Senha</label>
+            <input type="password" name="password" placeholder="Senha">
+        </div>
+        <button class="btn-login" type="submit" name="acao" value="Logar">Login</button>
+    </form>
 </div>
