--- a/views/cadastrando.ejs
+++ b/views/cadastrando.ejs
@@ -5,16 +5,17 @@
     <div class="right-login">
         <div class="card-login">
             <h1>LOGIN</h1>
-            <form action="/" method="post">
+            <form action="/cadastra-usr" method="post">
                 <div class="textfield">
                     <label for="usuario">Usuário</label>
                     <input type="text" name="login" placeholder="Usuário">
                 </div>
                 <div class="textfield">
                     <label for="">Senha</label>
-                    <input type="password" name="password" placeholder="Senha">
+                    <input type="password" name="password" placeholder="Digite sua senha">
+                    <input type="password" name="password" placeholder="Confirme sua senha">
                 </div>
-                <button class="btn-login" type="submit" name="acao" value="Logar">Login</button>
+                <button class="btn-login" type="submit" name="acao" value="Cadastrando">Casdatre-se</button>
             </form>
         </div>
     </div>
