--- a/views/layout/layoutPadrao.ejs
+++ b/views/layout/layoutPadrao.ejs
@@ -33,7 +33,10 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item active">
-                <a class="nav-link" href="#">Login</a>
+                <a class="nav-link" href="index.ejs">Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/views/cadastrando.ejs">Cadastre-se</a>
               </li>
             </ul>
           </div>
