--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,32 +1,1 @@
-<div class="main-login">
-    <div class="left-login">
-        <img src="/public/img/loginanimado.svg" class="left-login-img" alt="Tela de Login segura">
-    </div>
-    <div class="right-login">
-        <div class="card-login">
-            <h1>LOGIN</h1>
-            <form action="/" method="post">
-                <div class="textfield">
-                    <label for="usuario">Usuário</label>
-                    <input type="text" name="login" placeholder="Usuário">
-                </div>
-                <div class="textfield">
-                    <label for="">Senha</label>
-                    <input type="password" name="password" placeholder="Senha">
-                </div>
-                <button class="btn-login" type="submit" name="acao" value="Logar">Login</button>
-            </form>
-        </div>
-    </div>
-    <form action="/cadastra-usr" method="post">
-        <div class="textfield">
-            <label for="usuario">Usuário</label>
-            <input type="text" name="login" placeholder="Usuário">
-        </div>
-        <div class="textfield">
-            <label for="">Senha</label>
-            <input type="password" name="password" placeholder="Senha">
-        </div>
-        <button class="btn-login" type="submit" name="acao" value="Logar">Login</button>
-    </form>
-</div>
+<h2>Home Page</h2>
