--- a/views/layout/layoutPadrao.ejs
+++ b/views/layout/layoutPadrao.ejs
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-light ">
         <div class="container-fluid">
-          <a class="navbar-brand " href="#">Inicio</a>
+          <a class="navbar-brand " href="/">Inicio</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -30,15 +30,24 @@
               </li>
             </ul>
           </div>
+          
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.ejs">Login</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/views/cadastrando.ejs">Cadastre-se</a>
-              </li>
-            </ul>
+            <% if (locals.usuarioLogado) { %>
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="/logout">logout <%= locals.usuarioLogado %></a>
+                </li>
+              </ul>
+            <% } else { %>
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="/">Login</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/cadastrando">Cadastre-se</a>
+                </li>
+              </ul>
+            <% } %>
           </div>
         </div>
       </nav>
