--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,19 +4,18 @@
     </div>
     <div class="right-login">
         <div class="card-login">
-            <h1>Cadastro </h1>
-            <form action="/register" method="post">
+            <h1>LOGIN</h1>
+            <form action="/login" method="post">
                 <div class="textfield">
                     <label for="usuario">Usuário</label>
                     <input type="text" name="login" placeholder="Usuário">
                 </div>
                 <div class="textfield">
                     <label for="">Senha</label>
-                    <input class="mb-2" type="password" name="password" placeholder="Digite sua senha">
-                    <input type="password" name="passwordReply" placeholder="Confirme sua senha">
+                    <input type="password" name="password" placeholder="Senha">
                 </div>
-                <button class="btn-login" type="submit" name="acao" value="Cadastrando">Casdatre-se</button>
+                <button class="btn-login" type="submit" name="acao" value="Logar">Login</button>
             </form>
         </div>
-    </div>
+    </div>s
 </div>
